--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@supabase/realtime-js",
-  "version": "0.0.0-automated",
+  "version": "2.11.4-patched.1",
   "description": "Listen to realtime updates to your PostgreSQL database",
   "keywords": [
     "realtime",
@@ -35,11 +35,14 @@
     "docs": "typedoc src/index.ts --out docs/v2",
     "docs:json": "typedoc --json docs/v2/spec.json --excludeExternals src/index.ts",
     "check-exports": "attw --pack .",
-    "ci": "run-s test coverage"
+    "ci": "run-s test coverage",
+    "prepare": "npm run build"
   },
   "dependencies": {
     "@supabase/node-fetch": "^2.6.14",
-    "@types/phoenix": "^1.5.4",
+    "@types/phoenix": "^1.5.4"
+  },
+  "optionalDependencies": {
     "@types/ws": "^8.5.10",
     "ws": "^8.18.0"
   },
